--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
-name: CI/CD Workflow
+name: Build
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build-lint-test:
@@ -45,23 +43,3 @@ jobs:
         with:
           name: reports
           path: reports
-
-  publish:
-    needs: build-lint-test
-    runs-on: ubuntu-latest
-
-    container:
-      image: cimg/node:20.5.1
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Run semantic-release
-        run: npx semantic-release
