--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -8,9 +8,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Create pull request
-        uses: devops-infra/action-pull-request@v0.5.5
+      - name: Create Pull Request
+        uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          reviewer: HiromiShikata
-          target_branch: main
+          destination_branch: "main"
+          source_branch: ""
+          pr_title: "PR from ${GITHUB_REF##*/}"
+          pr_body: "This is an auto-generated PR."
+          draft: false
