--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -1,4 +1,4 @@
-name: Run the Action on each commit
+name: Create PR
 on:
   push:
     branches-ignore: main
@@ -11,7 +11,7 @@ jobs:
       - name: Create Pull Request
         uses: repo-sync/pull-request@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           destination_branch: "main"
           source_branch: ""
           pr_title: "PR from ${GITHUB_REF##*/}"
