--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -8,12 +8,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+
+      - name: Set branch name as output
+        id: branch_name
+        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+
       - name: Create Pull Request
         uses: repo-sync/pull-request@v2
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           destination_branch: "main"
           source_branch: ""
-          pr_title: "PR from ${GITHUB_REF##*/}"
+          pr_title: "PR from ${{ steps.branch_name.outputs.branch }}"
           pr_body: "This is an auto-generated PR."
           draft: false
