--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create Pull Request
         uses: repo-sync/pull-request@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           destination_branch: "main"
           source_branch: ""
           pr_title: "PR from ${{ steps.branch_name.outputs.branch }}"
