--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -20,6 +20,14 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
           destination_branch: "main"
           source_branch: ""
-          pr_title: "PR from ${{ steps.branch_name.outputs.branch }}"
+          pr_title: "${{ steps.branch_name.outputs.branch }}"
           pr_body: "This is an auto-generated PR."
           draft: false
+
+      - name: Assign PR to author
+        if: steps.create_pr.outputs.pr_number
+        uses: octokit/request-action@v2.x
+        with:
+          route: POST /repos/${{ github.repository }}/issues/${{ steps.create_pr.outputs.pr_number }}/assignees
+          assignees: ${{ github.actor }}
+          token: ${{ secrets.GITHUB_TOKEN }}
