--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Automerge PR
         uses: pascalgn/automerge-action@v0.14.2
         with:
-          GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
