--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "@octokit/rest": "^20.0.1",
+    "dotenv": "^16.3.1",
+    "openai": "^4.1.0"
   }
 }
