--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,32 @@
-name: CI/CD Workflow
+name: Build
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build-lint-test:
     runs-on: ubuntu-latest
 
-    container:
-      image: cimg/node:20.5.1
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
       - name: Install dependencies
         run: npm ci
 
+      - name: Check commit message format
+        run: npx commitlint --from=origin/main
+
       - name: Check code format
         run: |
-          npm run format
+          npm run fmt
           git --no-pager diff
           exit $(git diff | wc -l)
-
-      - name: Check commit message format
-        run: npx commitlint --from=main
 
       - name: Build
         run: npm run build
@@ -45,23 +45,3 @@ jobs:
         with:
           name: reports
           path: reports
-
-  publish:
-    needs: build-lint-test
-    runs-on: ubuntu-latest
-
-    container:
-      image: cimg/node:20.5.1
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Run semantic-release
-        run: npx semantic-release
