--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "check-node-version": "^4.2.1",
+    "commitlint": "^17.7.1",
     "conventional-changelog-conventionalcommits": "^6.1.0",
     "eslint": "^8.47.0",
     "eslint-plugin-import": "^2.28.1",
