--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^20.0.1",
+    "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "openai": "^4.1.0"
   }
