ci: check DONTMERGE mark

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,11 @@ name: Build
 
 on:
   push:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   build-lint-test:
@@ -45,3 +50,16 @@ jobs:
         with:
           name: reports
           path: reports
+
+  check-dontmerge:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Search for DONTMERGE comments
+        run: |
+          if grep -r 'DONTMERGE' --exclude-dir=.github --exclude-dir=.git --exclude=README.md; then
+            echo "DONTMERGE keyword detected!"
+            exit 1
+          fi
