--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,15 +46,13 @@ jobs:
           name: reports
           path: reports
 
-  check-dontmerge:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Search for DONTMERGE comments
         run: |
-          if grep -r 'DONTMERGE' --exclude-dir=.github --exclude-dir=.git --exclude=README.md; then
+          if grep -r 'DONTMERGE' \
+            --exclude-dir=.github \
+            --exclude-dir=.git \
+            --exclude=README.md \
+            ; then
             echo "DONTMERGE keyword detected!"
             exit 1
           fi
