--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@octokit/rest": "^20.0.1",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
-    "openai": "^4.1.0"
+    "openai": "^4.1.0",
+    "weaviate-ts-client": "^1.5.0"
   }
 }
