--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "openai": "^4.1.0",
+    "pdf-parse": "^1.1.1",
     "weaviate-ts-client": "^1.5.0"
   }
 }
